@@ -1,4 +1,4 @@
-package io.metersphere.system.dto.response;
+package io.metersphere.system.dto.user.response;
 
 import io.metersphere.system.domain.UserInvite;
 import io.swagger.v3.oas.annotations.media.Schema;
@@ -14,6 +14,6 @@ public class UserInviteResponse {
     private List<String> inviteIds;
 
     public UserInviteResponse(List<UserInvite> userInvites) {
-        this.inviteIds = userInvites.stream().map(UserInvite::getId).collect(java.util.stream.Collectors.toList());
+        this.inviteIds = userInvites.stream().map(UserInvite::getId).toList();
     }
 }
